fix: Restore gap tokens to prevent breaking changes

--- a/packages/css/src/components/table-of-contents/table-of-contents.scss
+++ b/packages/css/src/components/table-of-contents/table-of-contents.scss
@@ -8,9 +8,12 @@
 @use "../../common/text-rendering" as *;
 
 .ams-table-of-contents {
+  display: flex;
+  flex-direction: column;
   font-family: var(--ams-table-of-contents-font-family);
   font-size: var(--ams-table-of-contents-font-size);
   font-weight: var(--ams-table-of-contents-font-weight);
+  gap: var(--ams-table-of-contents-gap);
   line-height: var(--ams-table-of-contents-line-height);
 }
 
@@ -23,6 +26,7 @@
 
   display: flex;
   flex-direction: column;
+  gap: var(--ams-table-of-contents-list-gap);
 
   @include hyphenation;
   @include text-rendering;
